--- a/client/partials/animation.html
+++ b/client/partials/animation.html
@@ -4,21 +4,30 @@
     <a href="/#/about"><span class="colorFive">About</span></a>
     <a href="/#/contact"><span class="colorSix">Contact</span></a>
     <br>
-    <a href="#/text" ><span class="colorOne">Textures</span></a>
+    <a href="/#/text"><span class="colorOne">Emergent Possibilities</span></a>
+    <a href="/#/magnet"><span class="colorTwo">Magnetic Attractions</span></a>
+    <a href="/#/gauge"><span class="colorThree">Meaningless Measures</span></a>
+    <a href="/#/animation"><span class="colorFour">Emergence over Time</span></a>
+    <!-- <a href="#/text" ><span class="colorOne">Textures</span></a> -->
   </div>
 </div>
 
+
+<div class="col-md-9 workingHeaders">
+  <h2>Coming Soon!!!</h2>
+</div>
+
 <!-- GRID -->
-<div class="col-md-9">
+<!-- <div class="col-md-9">
   <br>
   <div ng-hide = "clicked">
       <div class="nonDraggableImage smallGrid" ng-repeat="animation in animations">
           <img ng-src="{{animation.thumbnail}}" alt="{{animation.title}}" ng-click = "one(animation)">
       </div>
-  </div>
+  </div> -->
 
   <!-- SINGLE -->
-  <div ng-show = "clicked">
+  <!-- <div ng-show = "clicked">
       <img src="{{single.source}}" alt="{{single.title}}" ng-click = "one()"/>
   </div>
-</div>
+</div> -->
