--- a/client/partials/gauge.html
+++ b/client/partials/gauge.html
@@ -6,10 +6,10 @@
     <a href="/#/about"><span class="colorFive">About</span></a>
     <a href="/#/contact"><span class="colorSix">Contact</span></a>
     <br>
-    <a href="/#/text"><span class="colorOne">Textures</span></a>
-    <a href="/#/magnet"><span class="colorTwo">Magnets</span></a>
-    <a href="/#/gauge"><span class="colorThree">Gauges</span></a>
-    <a href="/#/animation"><span class="colorFour">Animations</span></a>
+    <a href="/#/text"><span class="colorOne">Emergent Possibilities</span></a>
+    <a href="/#/magnet"><span class="colorTwo">Magnetic Attractions</span></a>
+    <a href="/#/gauge"><span class="colorThree">Meaningless Measures</span></a>
+    <a href="/#/animation"><span class="colorFour">Emergence over Time</span></a>
   </div>
 </div>
 
